--- a/BS_alapok.html
+++ b/BS_alapok.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <title>BS_alapok</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque autem officia iure. Id beatae ratione laudantium. Enim cum harum minus dicta voluptatem officiis libero nihil, placeat voluptate, corporis sit assumenda.
+                </p>
+            </div>
+            <div class="col">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea explicabo molestiae, dolorum quis tenetur cum minima reiciendis. Culpa ut doloribus vero? Repudiandae dolore voluptatum ullam rerum? Reiciendis doloribus sequi harum!
+            </p>
+        </div>
+            <div class="col">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident perspiciatis accusamus commodi placeat atque rem sequi voluptates quisquam fugit deserunt? Sed, voluptates veritatis cum tempore earum quaerat amet eligendi quibusdam?
+
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
