--- a/BS_alapok.html
+++ b/BS_alapok.html
@@ -10,20 +10,19 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col-2 p-5">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque autem officia iure. Id beatae ratione laudantium. Enim cum harum minus dicta voluptatem officiis libero nihil, placeat voluptate, corporis sit assumenda.
                 </p>
             </div>
-            <div class="col">
+            <div class="col-4 p-5">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea explicabo molestiae, dolorum quis tenetur cum minima reiciendis. Culpa ut doloribus vero? Repudiandae dolore voluptatum ullam rerum? Reiciendis doloribus sequi harum!
             </p>
         </div>
-            <div class="col">
+            <div class="col p-5">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident perspiciatis accusamus commodi placeat atque rem sequi voluptates quisquam fugit deserunt? Sed, voluptates veritatis cum tempore earum quaerat amet eligendi quibusdam?
-
                 </p>
             </div>
         </div>
