--- a/BS_alapok.html
+++ b/BS_alapok.html
@@ -8,24 +8,25 @@
     <title>BS_alapok</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container border">
         <div class="row">
-            <div class="col-2 p-5">
+            <div class="col-xl-4 col-md-3 p-5 border">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque autem officia iure. Id beatae ratione laudantium. Enim cum harum minus dicta voluptatem officiis libero nihil, placeat voluptate, corporis sit assumenda.
                 </p>
             </div>
-            <div class="col-4 p-5">
+            <div class="col-xl-4 col-md-3 p-5 border">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea explicabo molestiae, dolorum quis tenetur cum minima reiciendis. Culpa ut doloribus vero? Repudiandae dolore voluptatum ullam rerum? Reiciendis doloribus sequi harum!
             </p>
         </div>
-            <div class="col p-5">
+            <div class="col-xl-4 col-md-6 p-5 border">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident perspiciatis accusamus commodi placeat atque rem sequi voluptates quisquam fugit deserunt? Sed, voluptates veritatis cum tempore earum quaerat amet eligendi quibusdam?
                 </p>
             </div>
         </div>
     </div>
+    
 </body>
 </html>
