--- a/BS_alapok.html
+++ b/BS_alapok.html
@@ -27,6 +27,46 @@
             </div>
         </div>
     </div>
-    
+
+    <div class="container mt-5">
+        <div class="row justify-content-around">
+            <div class="col-3">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate at tempora minus alias! Neque, quae quod accusantium iste, nihil tempora saepe inventore numquam adipisci culpa omnis vitae tenetur mollitia. Magni?
+                </p>
+            </div>
+            <div class="col-3">
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae fugiat voluptate numquam, sunt nam quidem pariatur, vero illum explicabo laborum, quam est debitis. Pariatur impedit aliquam delectus sunt nostrum saepe.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-5">
+        <table class="table table-striped table-bordered table-hover table-dark">
+            <thead class="table-info">
+                <tr class="table-danger">
+                    <th>1</th>
+                    <th>2</th>
+                    <th>3</th>
+                <tr>
+            </thead>
+            <tr>
+                    <td>11</td>
+                    <td>21</td>
+                    <td>31</td>
+                </tr>
+            <tr class="table-danger">
+                    <td>21</td>
+                    <td>22</td>
+                    <td>23</td>
+                </tr>
+            <tr>
+                    <th>31</th>
+                    <th>32</th>
+                    <th>33</th> 
+                </tr>
+        </table>
+    </div>
 </body>
 </html>
