--- a/BS_alapok.html
+++ b/BS_alapok.html
@@ -17,7 +17,30 @@
             </div>
             <div class="col-xl-4 col-md-3 p-5 border">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea explicabo molestiae, dolorum quis tenetur cum minima reiciendis. Culpa ut doloribus vero? Repudiandae dolore voluptatum ullam rerum? Reiciendis doloribus sequi harum!
+                    <table class="table table-striped table-bordered table-hover table-dark">
+                        <thead class="table-info">
+                            <tr class="table-danger">
+                                <th>1</th>
+                                <th>2</th>
+                                <th>3</th>
+                            <tr>
+                        </thead>
+                        <tr>
+                                <td>11</td>
+                                <td>21</td>
+                                <td>31</td>
+                            </tr>
+                        <tr class="table-danger">
+                                <td>21</td>
+                                <td>22</td>
+                                <td>23</td>
+                            </tr>
+                        <tr>
+                                <th>31</th>
+                                <th>32</th>
+                                <th>33</th> 
+                            </tr>
+                    </table>
             </p>
         </div>
             <div class="col-xl-4 col-md-6 p-5 border">
@@ -51,22 +74,58 @@
                     <th>3</th>
                 <tr>
             </thead>
-            <tr>
-                    <td>11</td>
-                    <td>21</td>
-                    <td>31</td>
-                </tr>
-            <tr class="table-danger">
-                    <td>21</td>
-                    <td>22</td>
-                    <td>23</td>
-                </tr>
-            <tr>
-                    <th>31</th>
-                    <th>32</th>
-                    <th>33</th> 
-                </tr>
+            <tbody>
+                <tr class="table-danger">
+                        <td>11</td>
+                        <td>21</td>
+                        <td>31</td>
+                    </tr>
+                <tr>
+                        <td>21</td>
+                        <td>22</td>
+                        <td>23</td>
+                    </tr>
+                <tr>
+                        <th>31</th>
+                        <th>32</th>
+                        <th>33</th>
+                    </tr>
+            </tbody>
         </table>
+    </div>
+
+    <div class="container">
+        <div class="row justify-content-around">
+            <div class="col-6">
+                <table class="table table-striped table-bordered table-hover table-dark">
+                    <thead class="table-info">
+                        <tr class="table-danger">
+                            <th>1</th>
+                            <th>2</th>
+                            <th>3</th>
+                        <tr>
+                    </thead>
+                    <tbody>
+                        <tr class="table-danger">
+                                <td>11</td>
+                                <td>21</td>
+                                <td>31</td>
+                            </tr>
+                        <tr>
+                                <td>21</td>
+                                <td>22</td>
+                                <td>23</td>
+                            </tr>
+                        <tr>
+                                <th>31</th>
+                                <th>32</th>
+                                <th>33</th>
+                            </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 </html>
